добавлена минимальная структура html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="/">главная</a></li>
+          <li><a href="/lots">посмотреть лоты</a></li>
+          <li><a href="/about">об аукционе</a></li>
+        </ul>
+      </nav>
+      <img src="./images/logo-black.svg" alt="Логотип" />
+    </header>
+
+
+    <main>
+
+    </main>
+
+
+    <footer>
+
+    </footer>
+  </body>
 </html>
