--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="global" href="./styles/global.css">
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="header">
+      <nav class="header nav">
         <ul>
           <li><a href="/">главная</a></li>
           <li><a href="/lots">посмотреть лоты</a></li>
           <li><a href="/about">об аукционе</a></li>
         </ul>
       </nav>
-      <img src="./images/logo-black.svg" alt="Логотип" />
+      <img class="header header img" src="./images/logo-black.svg" alt="Логотип" />
+      <address class="header header address">
+        <p>+9 999 555 5555</p>
+        <p>info@sobaka.ge</p>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
     </header>
 
+    <main></main>
 
-    <main>
-
-    </main>
-
-
-    <footer>
-
-    </footer>
+    <footer></footer>
   </body>
 </html>
