--- a/index.html
+++ b/index.html
@@ -5,23 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="global" href="./styles/global.css">
+    <link rel="global" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <header class="header">
-      <nav class="header nav">
-        <ul>
-          <li><a href="/">главная</a></li>
-          <li><a href="/lots">посмотреть лоты</a></li>
-          <li><a href="/about">об аукционе</a></li>
-        </ul>
+      <nav class="header-nav">
+         <p><a href="/">главная</a></p>
+          <p><a href="/lots">посмотреть лоты</a></p>
+          <p><a href="/about">об аукционе</a></p>
       </nav>
-      <img class="header header img" src="./images/logo-black.svg" alt="Логотип" />
-      <address class="header header address">
-        <p>+9 999 555 5555</p>
-        <p>info@sobaka.ge</p>
-        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+      <img
+        class="header header-img"
+        src="./images/logo-black.svg"
+        alt="Логотип"
+      />
+      <address class="header header-address">
+        <ul>
+          <li>+9 999 555 5555</li>
+          <li>info@sobaka.ge</li>
+          <li>наб. Принсенграхт 263- 265, Амстердам</li>
+        </ul>
       </address>
     </header>
 
