New header class logic

--- a/index.html
+++ b/index.html
@@ -10,23 +10,32 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-nav">
-         <p><a href="/">главная</a></p>
-          <p><a href="/lots">посмотреть лоты</a></p>
-          <p><a href="/about">об аукционе</a></p>
-      </nav>
-      <img
-        class="header header-img"
-        src="./images/logo-black.svg"
-        alt="Логотип"
-      />
-      <address class="header header-address">
-        <ul>
-          <li>+9 999 555 5555</li>
-          <li>info@sobaka.ge</li>
-          <li>наб. Принсенграхт 263- 265, Амстердам</li>
-        </ul>
-      </address>
+     
+        <nav class="header-nav">
+          <ul class="nav-list">
+            <li class="nav-line"><a href="/">главная</a></li>
+            <li class="nav-link-active"><a href="/lots">посмотреть лоты</a></li>
+            <li class="nav-link-active"><a href="/about">об аукционе</a></li>
+          </ul>
+        </nav>
+
+        
+      <div class="header-logo">
+        <img
+          class="header header-img"
+          src="./images/logo-black.svg"
+          alt="Логотип"
+        />
+      </div>
+      <div class="box-address">
+        <address class="header header-address">
+          <ul>
+            <p><a href="#0">+9 999 555 5555</a></p>
+            <p><a href="#0">info@sobaka.ge</a></p>
+            <p><a href="#0">наб. Принсенграхт 263- 265, Амстердам</a></p>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main></main>
