--- a/index.html
+++ b/index.html
@@ -4,42 +4,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="global" href="./styles/global.css" />
+    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title> <!-- название -->
+    <link rel="global" href="./styles/global.css" />  <!-- загружаем данные css -->
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
+
   <body>
-    <header class="header">
+    <header class="header">  <!-- заголовок -->
      
-        <nav class="header-nav">
+        <nav class="header-nav"> <!-- навигация по сайту -->
           <ul class="nav-list">
             <li class="nav-line"><a href="/">главная</a></li>
-            <li class="nav-link-active"><a href="/lots">посмотреть лоты</a></li>
+            <li class="nav-link-active"><a href="/lots">посмотреть лоты</a></li> <!-- псевдо-ссылки навигации-->
             <li class="nav-link-active"><a href="/about">об аукционе</a></li>
           </ul>
         </nav>
 
         
-      <div class="header-logo">
+      <div class="header-logo"> <!-- лого -->
         <img
           class="header header-img"
           src="./images/logo-black.svg"
           alt="Логотип"
         />
       </div>
+
       <div class="box-address">
-        <address class="header header-address">
-          <ul>
-            <p><a href="#0">+9 999 555 5555</a></p>
-            <p><a href="#0">info@sobaka.ge</a></p>
-            <p><a href="#0">наб. Принсенграхт 263- 265, Амстердам</a></p>
+        <address class="header header-address"> <!-- контактная информация -->
+          <ul class="no-deco">
+            <li><a href="#0">+9 999 555 5555</a></li> <!-- псевдо-ссылки контактной информации-->
+            <li><a href="#0">info@sobaka.ge</a></li>
+            <li>наб. Принсенграхт 263- 265, Амстердам</li>
           </ul>
         </address>
       </div>
     </header>
 
-    <main></main>
+    <main></main> <!-- основная информация со страницы -->
 
-    <footer></footer>
+    <footer></footer> <!-- подвал сайта -->
   </body>
 </html>
