Started working on the cover

--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
       </div>
     </header>
 
-    <main></main> <!-- основная информация со страницы -->
+    <main>
+
+      <div class="cover"> <!-- обертка для основной информации со страницы -->
+        <h1 class="cover-title">Оно тебе надо</h1> <!-- заголовок страницы -->
+        <p class="cover-description">
+          Аукцион вещей, в которые никто не верил
+        </p>
+      </div>
+
+    </main> <!-- основная информация со страницы -->
 
     <footer></footer> <!-- подвал сайта -->
   </body>
