--- a/index.html
+++ b/index.html
@@ -4,24 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title> <!-- название -->
-    <link rel="global" href="./styles/global.css" />  <!-- загружаем данные css -->
+    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <!-- название -->
+    <link rel="global" href="./styles/global.css" />
+    <!-- загружаем данные css -->
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
   <body>
-    <header class="header">  <!-- заголовок -->
-     
-        <nav class="header-nav"> <!-- навигация по сайту -->
-          <ul class="nav-list">
-            <li class="nav-line"><a href="/">главная</a></li>
-            <li class="nav-link-active"><a href="/lots">посмотреть лоты</a></li> <!-- псевдо-ссылки навигации-->
-            <li class="nav-link-active"><a href="/about">об аукционе</a></li>
-          </ul>
-        </nav>
+    <header class="header">
+      <!-- заголовок -->
 
-        
-      <div class="header-logo"> <!-- лого -->
+      <nav class="header-nav">
+        <!-- навигация по сайту -->
+        <ul class="nav-list">
+          <li class="nav-line"><a href="/">главная</a></li>
+          <li class="nav-link-active"><a href="/lots">посмотреть лоты</a></li>
+          <!-- псевдо-ссылки навигации-->
+          <li class="nav-link-active"><a href="/about">об аукционе</a></li>
+        </ul>
+      </nav>
+
+      <div class="header-logo">
+        <!-- лого -->
         <img
           class="header header-img"
           src="./images/logo-black.svg"
@@ -30,9 +35,11 @@
       </div>
 
       <div class="box-address">
-        <address class="header header-address"> <!-- контактная информация -->
+        <address class="header header-address">
+          <!-- контактная информация -->
           <ul class="no-deco">
-            <li><a href="#0">+9 999 555 5555</a></li> <!-- псевдо-ссылки контактной информации-->
+            <li><a href="#0">+9 999 555 5555</a></li>
+            <!-- псевдо-ссылки контактной информации-->
             <li><a href="#0">info@sobaka.ge</a></li>
             <li>наб. Принсенграхт 263- 265, Амстердам</li>
           </ul>
@@ -41,16 +48,26 @@
     </header>
 
     <main>
-
-      <div class="cover"> <!-- обертка для основной информации со страницы -->
-        <h1 class="cover-title">Оно тебе надо</h1> <!-- заголовок страницы -->
-        <p class="cover-description">
-          Аукцион вещей, в которые никто не верил
-        </p>
+      <div class="cover">
+        <!-- обертка для основной информации со страницы -->
+        <h1 class="cover-title">
+          <!-- заголовок страницы -->
+          <span class="cover-title-align cover-title-align-start">Оно </span>
+          <span class="cover-title-align cover-title-align-center">тебе</span>
+          <span class="cover-title-align cover-title-align-end"> надо</span>
+        </h1>
+        <div class="cover-one-row">
+          <p class="cover-description">Аукцион вещей, в которые никто не верил</p>
+          <button class="button-bet">
+            <a href="#0">Сделать ставку</a>
+            <!-- псевдо-ссылка на страницу с лотами -->
+          </button>
+        </div>
       </div>
+    </main>
+    <!-- основная информация со страницы -->
 
-    </main> <!-- основная информация со страницы -->
-
-    <footer></footer> <!-- подвал сайта -->
+    <footer></footer>
+    <!-- подвал сайта -->
   </body>
 </html>
