--- a/index.html
+++ b/index.html
@@ -71,27 +71,28 @@
         <h2 class="lots-title">Лоты</h2>
 
         <div class="lots-list">
-          
+          <!-- статья один -->
           <article class="lots-item">
-            <img src="./images/card-lot-01.jpg" class="lots-item-img" alt="Лот 1" />
+
             <h3>Фильм режиссёра, который бросил киношколу</h3>
             <p class="lot-description-1">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
           </article>
-
+          <!-- статья два -->
           <article class="lots-item">
-            <img src="./images/card-lot-02.jpg" class="lots-item-img" alt="Лот 2" />
             <h3>Книга, где описан один скучный день из жизни рекламного агента</h3>
             <p class="lot-description-2">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
           </article>
-
+          <!-- статья три -->
           <article class="lots-item">
-            <img src="./images/card-lot-03.jpg" class="lots-item-img" alt="Лот 3" />
             <h3>Картина, которую повторит даже 5-летний сын маминой подруги</h3>
             <p class="lot-description-3">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
           </article>
 
         </div>
 
+      </section>
+      <section class="about">
+         
       </section>
     </main>
     <!-- основная информация со страницы -->
