Фикс кнопки, обновление точек в списке навигации хедера

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
 
       <div class="header-logo">
         <!-- лого -->
-        <img
-          class="header header-img"
-          src="./images/logo-black.svg"
-          alt="Логотип"
-        />
+        <a href="/">
+          <img
+            class="header-img"
+            src="./images/logo-black.svg"
+            alt="Логотип аукциона Оно тебе надо"
+          />
       </div>
 
       <address class="header-address">
@@ -59,7 +60,7 @@
             Аукцион вещей, в которые никто не верил
           </p>
           <button class="button-bet">
-            <a href="#0">Сделать ставку</a>
+            <a class="link-white" href="#0">Сделать ставку</a>
             <!-- псевдо-ссылка на страницу с лотами -->
           </button>
         </div>
