Лого в ссылке корректно, фикс строк адресов

--- a/index.html
+++ b/index.html
@@ -18,29 +18,30 @@
       <nav class="header-nav">
         <!-- навигация по сайту -->
         <ul class="nav-list">
-          <li class="nav-line"><a href="/">главная</a></li>
-          <li class="nav-link-active"><a href="/lots">посмотреть лоты</a></li>
+          <li class="nav-line"><a class="link-black" href="/">главная</a></li>
+          <li class="nav-link-active"><a class="link-black" href="/lots">посмотреть лоты</a></li>
           <!-- псевдо-ссылки навигации-->
-          <li class="nav-link-active"><a href="/about">об аукционе</a></li>
+          <li class="nav-link-active"><a class="link-black" href="/about">об аукционе</a></li>
         </ul>
       </nav>
 
       <div class="header-logo">
         <!-- лого -->
-        <a href="/">
+        <a class="logo-link" href="#0">
           <img
             class="header-img"
-            src="./images/logo-black.svg"
-            alt="Логотип аукциона Оно тебе надо"
-          />
+              src="./images/logo-black.svg"
+              alt="Логотип аукциона Оно тебе надо"
+            />
+        </a>
       </div>
 
       <address class="header-address">
         <!-- контактная информация -->
         <ul class="no-deco">
-          <li><a href="#0">+9 999 555 5555</a></li>
+          <li><a class="address-link" href="#0">+9 999 555 5555</a></li>
           <!-- псевдо-ссылки контактной информации-->
-          <li><a href="#0">info@sobaka.ge</a></li>
+          <li><a class="address-link" href="#0">info@sobaka.ge</a></li>
           <li>наб. Принсенграхт 263- 265, Амстердам</li>
         </ul>
       </address>
