Футер не сделан! Шрифты добавлены

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <!-- название -->
+    <!-- стираем браузерные настройки -->
     <link rel="global" href="./styles/global.css" />
+    <!-- загружаем данные fonts -->
+    <link rel ="fonts" href="./fonts/fonts.css" />
     <!-- загружаем данные css -->
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
