Марджины и паддинги вынесены вперед, ссылка убрана из кнопки, добавлены номера телефона

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
       <address class="header-address">
         <!-- контактная информация -->
         <ul class="no-deco">
-          <li><a class="address-link" href="#0">+9 999 555 5555</a></li>
+          <li><a class="address-link" href="+9 999 555 5555">+9 999 555 5555</a></li>
           <!-- псевдо-ссылки контактной информации-->
-          <li><a class="address-link" href="#0">info@sobaka.ge</a></li>
+          <li><a class="address-link" href="info@sobaka.ge">info@sobaka.ge</a></li>
           <li>наб. Принсенграхт 263- 265, Амстердам</li>
         </ul>
       </address>
@@ -68,8 +68,7 @@
             Аукцион вещей, в которые никто не верил
           </p>
           <button class="button-bet">
-            <a class="link-white" href="#0">Сделать ставку</a>
-            <!-- псевдо-ссылка на страницу с лотами -->
+            Сделать ставку
           </button>
         </div>
       </div>
@@ -156,9 +155,9 @@
       <address class="footer-address">
         <!-- контактная информация -->
         <ul class="no-deco">
-          <li><a href="#0">+9 999 555 5555</a></li>
+          <li><a href="+9 999 555 5555">+9 999 555 5555</a></li>
           <!-- псевдо-ссылки контактной информации-->
-          <li><a href="#0">info@sobaka.ge</a></li>
+          <li><a href="info@sobaka.ge">info@sobaka.ge</a></li>
           <li>наб. Принсенграхт 263- 265, Амстердам</li>
         </ul>
       </address>
