Фиксы фиксов: макс. размеры, добавление шрифтов, ссылка на телефон

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
     <!-- стираем браузерные настройки -->
-    <link rel="global" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
     <!-- загружаем данные fonts -->
-    <link rel ="fonts" href="./fonts/fonts.css" />
+    <link rel ="stylesheet" href="./fonts/fonts.css" />
     <!-- загружаем данные css -->
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
@@ -46,9 +46,9 @@
       <address class="header-address">
         <!-- контактная информация -->
         <ul class="no-deco">
-          <li><a class="address-link" href="+9 999 555 5555">+9 999 555 5555</a></li>
+          <li><a class="address-link" href="tel:+9 999 555 5555">+9 999 555 5555</a></li>
           <!-- псевдо-ссылки контактной информации-->
-          <li><a class="address-link" href="info@sobaka.ge">info@sobaka.ge</a></li>
+          <li><a class="address-link" href="mailto: info@sobaka.ge">info@sobaka.ge</a></li>
           <li>наб. Принсенграхт 263- 265, Амстердам</li>
         </ul>
       </address>
@@ -155,9 +155,9 @@
       <address class="footer-address">
         <!-- контактная информация -->
         <ul class="no-deco">
-          <li><a href="+9 999 555 5555">+9 999 555 5555</a></li>
+          <li><a href="tel:+9 999 555 5555">+9 999 555 5555</a></li>
           <!-- псевдо-ссылки контактной информации-->
-          <li><a href="info@sobaka.ge">info@sobaka.ge</a></li>
+          <li><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
           <li>наб. Принсенграхт 263- 265, Амстердам</li>
         </ul>
       </address>
