--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
       <address class="header-address">
         <!-- контактная информация -->
         <ul class="no-deco">
-          <li><a class="address-link" href="tel:+9 999 555 5555">+9 999 555 5555</a></li>
+          <li><a href="tel:+9-999-555-5555">+9 999 555 5555</a></li>
           <!-- псевдо-ссылки контактной информации-->
-          <li><a class="address-link" href="mailto: info@sobaka.ge">info@sobaka.ge</a></li>
+          <li><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
           <li>наб. Принсенграхт 263- 265, Амстердам</li>
         </ul>
       </address>
@@ -136,7 +136,7 @@
               или картина, которую может нарисовать даже ребёнок? Кому нужны все
               эти странные вещи, созданные любителями?
             </p>
-            <p>
+            <p class="par-2">
               Слишком сложные или, наоборот, слишком простые. Опережающие своё
               время. В пух и прах растерзанные критиками. Непринятые и
               непонятые. Когда-то они казались просто неудачными. Но, несмотря
@@ -155,7 +155,7 @@
       <address class="footer-address">
         <!-- контактная информация -->
         <ul class="no-deco">
-          <li><a href="tel:+9 999 555 5555">+9 999 555 5555</a></li>
+          <li><a href="tel:+9-999-555-5555">+9 999 555 5555</a></li>
           <!-- псевдо-ссылки контактной информации-->
           <li><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
           <li>наб. Принсенграхт 263- 265, Амстердам</li>
