Подгонка под макет через PP, фиксы пробелов между блоками

--- a/index.html
+++ b/index.html
@@ -56,13 +56,16 @@
 
     <main>
       <div class="cover">
-        <!-- обертка для основной информации со страницы -->
-        <h1 class="cover-title">
-          <!-- заголовок страницы -->
-          <span class="cover-title-align cover-title-align-start">Оно </span>
-          <span class="cover-title-align cover-title-align-center">тебе</span>
-          <span class="cover-title-align cover-title-align-end"> надо</span>
-        </h1>
+         <!-- обертка для основной информации со страницы -->
+        <div class="cover-box">
+           <h1 class="cover-title">
+           <!-- заголовок страницы -->
+            <span class="cover-title-align cover-title-align-start">Оно </span>
+            <span class="cover-title-align cover-title-align-center">тебе</span>
+            <span class="cover-title-align cover-title-align-end"> надо</span>
+           </h1>
+        </div>  
+
         <div class="cover-one-row">
           <p class="cover-description">
             Аукцион вещей, в которые никто не верил
