Расчитаны падинги в обложке, смена порядка подключаения стилей

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <!-- загружаем данные fonts -->
+    <link rel="stylesheet" href="./fonts/fonts.css" />
     <!-- стираем браузерные настройки -->
     <link rel="stylesheet" href="./styles/global.css" />
-    <!-- загружаем данные fonts -->
-    <link rel ="stylesheet" href="./fonts/fonts.css" />
     <!-- загружаем данные css -->
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
@@ -56,29 +56,27 @@
 
     <main>
       <div class="cover">
-         <!-- обертка для основной информации со страницы -->
+        <!-- обертка для основной информации со страницы -->
         <div class="cover-box">
-           <h1 class="cover-title">
-           <!-- заголовок страницы -->
+          <h1 class="cover-title">
+            <!-- заголовок страницы -->
             <span class="cover-title-align cover-title-align-start">Оно </span>
-            <span class="cover-title-align cover-title-align-center">тебе</span>
-            <span class="cover-title-align cover-title-align-end"> надо</span>
-           </h1>
-        </div>  
+            <span class="cover-title-align cover-title-align-center padding-tebe">тебе</span>
+            <span class="cover-title-align cover-title-align-end padding-nado"> надо</span>
+          </h1>
+        </div>
 
         <div class="cover-one-row">
           <p class="cover-description">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button class="button-bet">
-            Сделать ставку
-          </button>
+          <button class="button-bet">Сделать ставку</button>
         </div>
       </div>
-      
+
       <section class="lots">
         <!-- лоты -->
-        
+
         <h2 class="lots-title">Лоты</h2>
 
         <div class="lots-list">
@@ -177,13 +175,10 @@
       </nav>
 
       <div class="socials">
-        <img class="socials-img"
-          src="./images/yt.svg" 
-          alt="иконка YouTube" />
-        <img class="socials-img"
-          src="./images/vk.svg"
-          alt="иконка ВКонтакте" />
-        <img class="socials-img"
+        <img class="socials-img" src="./images/yt.svg" alt="иконка YouTube" />
+        <img class="socials-img" src="./images/vk.svg" alt="иконка ВКонтакте" />
+        <img
+          class="socials-img"
           src="./images/pinterest.svg"
           alt="иконка Pinterest"
         />
