Фиксы положений по пиксельперфект

--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
       <address class="header-address">
         <!-- контактная информация -->
         <ul class="no-deco">
-          <li><a href="tel:+9-999-555-5555">+9 999 555 5555</a></li>
+          <li><a class='address-phone' href="tel:+9-999-555-5555">+9 999 555 5555</a></li>
           <!-- псевдо-ссылки контактной информации-->
-          <li><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
-          <li>наб. Принсенграхт 263- 265, Амстердам</li>
+          <li><a class='address-phone' href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
+          <li class="address-address">наб. Принсенграхт 263-  <!--это ужасно, но иначе не вышло...-->
+265, Амстердам</li>
         </ul>
       </address>
     </header>
@@ -115,7 +116,7 @@
               из революционных работ Кандинского?
             </p>
           </article>
-          <a class="bigger-font-size-link" href="#0">посмотреть больше</a>
+          <a class="bigger-font-size-link lots-link" href="#0">посмотреть больше</a>
         </div>
       </section>
 
@@ -156,7 +157,7 @@
       <address class="footer-address">
         <!-- контактная информация -->
         <ul class="no-deco">
-          <li><a href="tel:+9-999-555-5555">+9 999 555 5555</a></li>
+          <li><a class='address-phone' href="tel:+9-999-555-5555">+9 999 555 5555</a></li>
           <!-- псевдо-ссылки контактной информации-->
           <li><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
           <li>наб. Принсенграхт 263- 265, Амстердам</li>
