Подгонка под макет, небольшие фиксы логики. Надо пересмотреть и/или переписать секцию about

--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
       <address class="footer-address">
         <!-- контактная информация -->
         <ul class="no-deco">
-          <li><a class='address-phone' href="tel:+9-999-555-5555">+9 999 555 5555</a></li>
+          <li><a class="address-phone" href="tel:+9-999-555-5555">+9 999 555 5555</a></li>
           <!-- псевдо-ссылки контактной информации-->
-          <li><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
+          <li><a class="address-phone" href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
           <li>наб. Принсенграхт 263- 265, Амстердам</li>
         </ul>
       </address>
