Начало переработки футера, небольшие фиксы

--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
           <li><a class="address-phone" href="tel:+9-999-555-5555">+9 999 555 5555</a></li>
           <!-- псевдо-ссылки контактной информации-->
           <li><a class="address-phone" href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
-          <li>наб. Принсенграхт 263- 265, Амстердам</li>
+          <li>наб. Принсенграхт 263-265, </li>
+            <li>Амстердам</li>
         </ul>
       </address>
 
