Финальная версия, фиксы логики, убрана пара ненужных свойств

--- a/index.html
+++ b/index.html
@@ -62,8 +62,13 @@
           <h1 class="cover-title">
             <!-- заголовок страницы -->
             <span class="cover-title-align cover-title-align-start">Оно </span>
-            <span class="cover-title-align cover-title-align-center padding-tebe">тебе</span>
-            <span class="cover-title-align cover-title-align-end padding-nado"> надо</span>
+            <span
+              class="cover-title-align cover-title-align-center padding-tebe"
+              >тебе</span
+            >
+            <span class="cover-title-align cover-title-align-end padding-nado">
+              надо</span
+            >
           </h1>
         </div>
 
@@ -116,7 +121,9 @@
               из революционных работ Кандинского?
             </p>
           </article>
-          <a class="bigger-font-size-link lots-link" href="#0">посмотреть больше</a>
+          <a class="bigger-font-size-link lots-link" href="#0"
+            >посмотреть больше</a
+          >
         </div>
       </section>
 
@@ -157,11 +164,19 @@
       <address class="footer-address">
         <!-- контактная информация -->
         <ul class="no-deco">
-          <li><a class="address-phone" href="tel:+9-999-555-5555">+9 999 555 5555</a></li>
+          <li>
+            <a class="address-phone" href="tel:+9-999-555-5555"
+              >+9 999 555 5555</a
+            >
+          </li>
           <!-- псевдо-ссылки контактной информации-->
-          <li><a class="address-phone" href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
-          <li>наб. Принсенграхт 263-265, </li>
-            <li>Амстердам</li>
+          <li>
+            <a class="address-phone" href="mailto:info@sobaka.ge"
+              >info@sobaka.ge</a
+            >
+          </li>
+          <li>наб. Принсенграхт 263-265,</li>
+          <li>Амстердам</li>
         </ul>
       </address>
 
@@ -171,8 +186,8 @@
           <li class="nav-non-active-link">
             <a class="link-black" href="/">главная</a>
           </li>
-          <li><a href="/lots">посмотреть лоты</a></li>
-          <li><a href="/about">об аукционе</a></li>
+          <li class="footer-nav-li"><a href="/lots">посмотреть лоты</a></li>
+          <li class="footer-nav-li"><a href="/about">об аукционе</a></li>
         </ul>
       </nav>
 
