Небольшие фиксы в семантике

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       <nav class="header-nav">
         <!-- навигация по сайту -->
         <ul class="nav-list">
-          <li class="nav-non-active-link">
-            <a class="link-black" href="/">главная</a>
+          <li>
+            <a class="link-nav nav-non-active-link" href="/">главная</a>
           </li>
-          <li class="nav-link-active">
-            <a class="link-black" href="/lots">посмотреть лоты</a>
+          <li>
+            <a class="link-nav nav-link-active" href="/lots">посмотреть лоты</a>
           </li>
-          <li class="nav-link-active">
-            <a class="link-black" href="/about">об аукционе</a>
+          <li>
+            <a class="link-nav nav-link-active" href="/about">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -43,13 +43,13 @@
         </a>
       </div>
 
-      <address class="header-address">
+      <address class="address">
         <!-- контактная информация -->
         <ul class="no-deco">
           <li><a class='address-phone' href="tel:+9-999-555-5555">+9 999 555 5555</a></li>
           <!-- псевдо-ссылки контактной информации-->
           <li><a class='address-phone' href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
-          <li class="address-address">наб. Принсенграхт 263-  <!--это ужасно, но иначе не вышло...-->
+          <li class="address-text">наб. Принсенграхт 263-  <!--это ужасно, но иначе не вышло...-->
 265, Амстердам</li>
         </ul>
       </address>
@@ -161,7 +161,7 @@
     <!-- основная информация со страницы -->
 
     <footer class="footer">
-      <address class="footer-address">
+      <address class="address address-position-footer">
         <!-- контактная информация -->
         <ul class="no-deco">
           <li>
@@ -184,7 +184,7 @@
         <!-- навигация по сайту -->
         <ul class="no-deco">
           <li class="nav-non-active-link">
-            <a class="link-black" href="/">главная</a>
+            <a class="link-nav" href="/">главная</a>
           </li>
           <li class="footer-nav-li"><a href="/lots">посмотреть лоты</a></li>
           <li class="footer-nav-li"><a href="/about">об аукционе</a></li>
